@startuml PaymentStrategy

title Strategy Pattern - Payment Example

interface PaymentStrategy {
  + pay(amount: number): void
}

class PaymentContext {
  - strategy: PaymentStrategy
  + setStrategy(strategy: PaymentStrategy): void
  + pay(amount: number): void
}

class CreditCardStrategy {
  - cardNumber: String
  - cardHolderName: String
  - expirationDate: String
  - cvv: String
  + pay(amount: number): void
}

class PayPalStrategy {
  - email: String
  - password: String
  + pay(amount: number): void
}

class KlarnaStrategy {
  - email: String
  - password: String
  + pay(amount: number): void
}

PaymentStrategy <|.. CreditCardStrategy
PaymentStrategy <|.. PayPalStrategy
PaymentStrategy <|.. KlarnaStrategy

PaymentContext o-- PaymentStrategy

@enduml
